inicio pagina create-poin

--- a/styles/main.css
+++ b/styles/main.css
@@ -26,18 +26,10 @@
      font-family: 'Ubuntu', sans-serif;
    }
 
-   /* O . chama a class*/
+   /*  . chama a class--- alt+shift+Farrumarcodigo*/
   
 
  
-
-
-
-
-
-
- 
-  
 
 
 /* 1:32*/
