--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -46,4 +46,82 @@ form{
     box-sizing: border-box;
 }
 
-/*00:35:*/
+ form h1 {
+     font-size: 36px;
+ }
+
+ form fieldset{
+     margin-top: 64px;
+ }
+
+ form legend{
+     margin-bottom: 40px;
+ }
+
+ form legend h2{
+     font-size: 24px;
+ }
+
+ form .field{
+     flex: 1;
+
+     display: flex;
+     flex-direction: column;
+
+     margin-bottom: 24px;
+ }
+
+ form .field-group{
+     display: flex;
+ }
+
+ form input,
+ form select
+ {
+     background-color: #f0f0f5;
+     border: 0;
+     padding: 16px 24px;
+     font-size: 16px;
+
+     outline: none;
+     border-radius: 8px;
+ }
+ form select{
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+ }
+
+ form label{
+     font-size: 14px;
+     margin-bottom: 8px;
+ }
+
+ form .field-group + .field{
+margin-left: 24px;
+
+ }
+
+ form button{
+     width: 260px;
+     height: 56px;
+
+     background-color: var(--primary-color);
+     border-radius: 8px;
+
+     color: white;
+     font-weight: bold;
+     font-size: 16px;
+
+     border: 0;
+
+     margin-top: 40px;
+     
+     transition-duration: 400ms; 
+ }
+
+ form button:hover{
+     background-color: #2fb86e;
+ }
+
+ /*01:02*/
