--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -57,11 +57,24 @@ form{
 
  form legend{
      margin-bottom: 40px;
+
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     font-size: 14px;
+
+     width: 100%;
+
  }
 
  form legend h2{
      font-size: 24px;
  }
+
+ form legend span{
+     color: var(--title-color);
+ }
+
 
  form .field{
      flex: 1;
