--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt_br">
+{% extends "layout.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% set pageId = "page-home" %}
 
+{% block title %}
     <title>Criar um ponto de coleta</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+{% endblock title %}
 
-    <link rel="stylesheet" href="/styles/main.css">
+{% block styles%}
     <link rel="stylesheet" href="/styles/create-point.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
-</head>
+{% endblock styles%}
 
-<body>
-
-    <div id="page-create-point">
-
-        {% include "partials/page-header.html" %}
-
-
-        <form action=" ">
+{% block content %}
+    <form action=" ">
             <h1> Cadastro do ponto de coleta</h1>
 
             <fieldset>
@@ -29,91 +20,96 @@
                     <h2>Dados da entidade</h2>
                 </legend>
 
-                <div class="field">
-                    <label for="name">Nome da entidade</label>
-                    <input type="text" name="name" required>
-                </div>
-
-                <div class="field-group">
-                    <div class="field">
-                        <label for="address">Endereço</label>
-                        <input type="text" name="address" required>
-                    </div>
-                    <div class="field">
-                        <label for="address2">Número/complemento</label>
-                        <input type="text" name="address2" required>
-                    </div>
-                </div>
-
-                    <div class="field-group">
-                        <div class="field">
-                            <label for="state">Estado</label>
-                            <select name="uf" required>
-                                <option value="">Selecione o Estado</option>
-                            </select>
-
-                            <input type="hidden" name="state">
-
-                        </div>
-                        <div class="field">
-                            <label for="city">Cidade</label>
-                            <select name="city" disabled required> /*disabled, deixa o campo indisponivel para clicar*/
-                                <option value="">Selecione a Cidade</option>
-
-                            </select>
-                        </div>
-                    </div>
-                
-                   
-
-
-            </fieldset>
-
-            <fieldset>
-                <legend>
-                    <h2>Ítens de coleta</h2>
-                </legend>
-
-                <div class="items-grid">
-                    <li data-id="1" >
-                        <img src="/assets/lampadas.svg" alt="Lâmpada">
-                        <span>Lâmpada</span>
-                    </li>
-                    <li data-id="2">
-                        <img src="/assets/baterias.svg" alt="Pilhas e Bateías">
-                        <span>Pilhas e Bateías</span>
-                    </li>
-                    <li data-id="3">
-                        <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
-                        <span>Papéis e Papelão</span>
-                    </li>
-                    <li data-id="4">
-                        <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
-                        <span>Residuos Eletrônicos</span>
-                    </li>
-                    <li data-id="5">
-                        <img src="/assets/organicos.svg" alt="Residuos Orgânicos">
-                        <span>Residuos Orgânicos</span>
-                    </li>
-                    <li data-id="6">
-                        <img src="/assets/oleo.svg" alt="Òleo de Cozinha">
-                        <span>Òleo de Cozinha</span>
-                    </li>
-                </div>
-
-                    <input type="hidden" name="items">
-
-
-            </fieldset>
-
-
-
-            <button type="submit">Cadastrar ponto de coleta</button>
-        </form>
-
+             <div class=" field-group"=" field-group""="field-group" "">
+        <div class=" field" ="field" ">
+            <label for="name">Nome da entidade</label>
+            <input type="text" name="name" required="required">
+        </div>
+        <div class=" field" ="field" ">
+            <label for="name">Imagem da entidade</label>
+            <input 
+            type="url" 
+            name="image" 
+            placeholder = "http://"
+            required="required">
+        </div>
     </div>
 
-    <script src="scripts/create-point.js"></script>
-</body>
+    <div class="field-group">
+        <div class="field">
+            <label for="address">Endereço</label>
+            <input type="text" name="address" required="required">
+        </div>
+        <div class="field">
+            <label for="address2">Número/complemento</label>
+            <input type="text" name="address2" required="required">
+        </div>
+    </div>
 
-</html>
+    <div class="field-group">
+        <div class="field">
+            <label for="state">Estado</label>
+            <select name="uf" required="required">
+                <option value="">Selecione o Estado</option>
+            </select>
+
+            <input type="hidden" name="state">
+
+        </div>
+        <div class="field">
+            <label for="city">Cidade</label>
+            <select name="city" disabled="disabled" required="required">
+                /*disabled, deixa o campo indisponivel para clicar*/
+                <option value="">Selecione a Cidade</option>
+
+            </select>
+        </div>
+    </div>
+
+</fieldset>
+
+<fieldset>
+    <legend>
+        <h2>Ítens de coleta</h2>
+        <span>
+            Selecione um ou mais itens abaixo</span>
+    </legend>
+
+    <div class="items-grid">
+        <li data-id="1">
+            <img src="/assets/lampadas.svg" alt="Lâmpada">
+            <span>Lâmpada</span>
+        </li>
+        <li data-id="2">
+            <img src="/assets/baterias.svg" alt="Pilhas e Bateías">
+            <span>Pilhas e Bateías</span>
+        </li>
+        <li data-id="3">
+            <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
+            <span>Papéis e Papelão</span>
+        </li>
+        <li data-id="4">
+            <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
+            <span>Residuos Eletrônicos</span>
+        </li>
+        <li data-id="5">
+            <img src="/assets/organicos.svg" alt="Residuos Orgânicos">
+            <span>Residuos Orgânicos</span>
+        </li>
+        <li data-id="6">
+            <img src="/assets/oleo.svg" alt="Òleo de Cozinha">
+            <span>Òleo de Cozinha</span>
+        </li>
+    </div>
+
+    <input type="hidden" name="items">
+
+</fieldset>
+
+<button type="submit">Cadastrar ponto de coleta</button>
+</form>
+{% endblock content%}
+
+{% block scripts %}
+<script src="scripts/create-point.js"></script>
+{% endblock scripts %}
