--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,48 +1,47 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}
 
-    <title>Ecoleta</title>
+{% set pageId = "page-home" %}
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/styles/main.css">
+{% block styles%}
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/modal.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
-</head>
-<body>
-
-    <div id="page-home">
-        <div class="content">
-
-            <header>
-                <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="create-point"> 
-                    <span></span> 
-                    Cadaste um ponto de coleta</a>
-            </header>
-    <main>
-        <h1>Seu marketplace de coleta de residuos</h1>
-    
-        <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
-
-        <a href="#"><span></span><strong>Pesquisas de pontos de coletas</strong> </a>
- 
-    </main>
-    
-         
-    </div>
-    </div>
+{% endblock styles%}
 
 
-    {% include "partials/modal.html" %}
-    
+{% block content %}
+<div class="content">
+
+        <header>
+            <img src="/assets/logo.svg" alt="Logomarca">
+            <a href="create-point"> 
+                <span></span> 
+                Cadaste um ponto de coleta</a>
+        </header>
+
+            <main>
+                <h1>Seu marketplace de coleta de residuos</h1>
+
+                <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
+
+                <a href="#"><span></span><strong>Pesquisas de pontos de coletas</strong> </a>
+            </main>
+
+        
+</div>
+    {% endblock content %}
+
+     
+{% block modal %}
+        {% include "partials/modal.html" %}
+
+{% endblock modal %}
+
+{% block scripts %}
     <script src="/scripts/index.js"></script>
-</body>
-</html>
+{% endblock scripts %}
 
+    
+ 
 
 
