--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<html lang="pt_br">
+{% extends "layout.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% set pageId = " page-search-results" %}
 
-    <title>Criar um ponto de coleta</title>
+{% block title%}
+<title> Resultado da pesquisa </title>
+{% endblock title%}
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/styles/main.css">
+{% block styles%}
     <link rel="stylesheet" href="/styles/search-results.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
-</head>
 
-<body>
+{% endblock styles%}
 
-    <div id="page-search-results">
 
-        
-            {% include "partials/page-header.html" %}
-        <main>
+{% block content %}
+<main>
                 <h4>
                     <strong>2 pontos</strong> encontrados
                 </h4>
@@ -46,16 +40,12 @@
                             Guilherme Gemballa, jardmin América<br/>
                             N° 260
                         </p>
-                    </div>
-
-                </div>
-
+                  </div>
+            </div>
         </main>
 
-        
+{% endblock content %}
 
-    </div>
+     
 
- </body>
 
-</html>
